--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@mailchimp/mailchimp_transactional": "^1.0.36",
+    "@mailchimp/mailchimp_transactional": "^1.0.37",
     "gatsby": "^3.13.0",
     "gatsby-plugin-gatsby-cloud": "^3.1.0",
+    "node-fetch": "^2.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
